# cartan

./: .gitignore  .gitmodules  .mailmap  CAPABILITIES.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  README.md  ROADMAP.md  STACK.md
benchmarks/rust/: Cargo.toml
benchmarks/rust/src/: berea_main.rs  crosslang_main.rs  homog_main.rs  main.rs  pipeline_main.rs
cartan/: Cargo.toml  README.md
cartan-core/: Cargo.toml  README.md
cartan-core/src/: bundle.rs  connection.rs  curvature.rs  error.rs  fiber.rs  geodesic.rs  lib.rs  manifold.rs  retraction.rs  rotor.rs  transport.rs
cartan-core/tests/: test_fiber.rs
cartan-cuda/: .gitignore  Cargo.toml  README.md  cartan_cuda.ll  cartan_cuda.options  cartan_cuda.target
cartan-cuda/src/: main.rs
cartan-dec/: Cargo.toml  README.md
cartan-dec/examples/: weitzenbock_sphere_gap.rs
cartan-dec/src/: advection.rs  cartesian_connection.rs  divergence.rs  error.rs  exterior.rs  extrinsic.rs  hodge.rs  laplace.rs  levi_civita.rs  lib.rs  line_bundle.rs  mesh.rs  mesh_gen.rs  mesh_quality.rs  stokes.rs
cartan-dec/tests/: integration.rs  test_extrinsic.rs  test_line_bundle.rs  test_mesh_quality.rs  test_stokes.rs
cartan-exterior/: Cargo.toml
cartan-exterior/src/: combo.rs  field.rs  gramian.rs  lib.rs  list.rs  multi_gramian.rs  term.rs
cartan-feec/: Cargo.toml
cartan-feec/src/: assemble.rs  cochain.rs  eigen.rs  lib.rs  operators.rs  whitney.rs
cartan-feec/src/whitney/: form.rs  lsf.rs
cartan-geo/: Cargo.toml  README.md
cartan-geo/src/: chern_simons.rs  curvature.rs  geodesic.rs  holonomy.rs  jacobi.rs  lib.rs
cartan-geo/src/disclination/: events.rs  lines.rs  mod.rs  segments.rs
cartan-geo/tests/: integration.rs  jacobi_along_sde.rs
cartan-gpu/: CHANGELOG.md  Cargo.toml  README.md
cartan-gpu-sys/: Cargo.toml  README.md  build.rs  vkfft_shim.c  wrapper.h
cartan-gpu-sys/src/: lib.rs
cartan-gpu/benches/: fft_compare.rs
cartan-gpu/shaders/: hello.wgsl
cartan-gpu/src/: buffer.rs  cuda.rs  cuda_buffer.rs  cufft.rs  device.rs  error.rs  fft.rs  hal_vulkan.rs  kernel.rs  lib.rs  shared_fft.rs  shared_memory.rs  uni.rs
cartan-gpu/tests/: buffer_roundtrip.rs  cuda_device.rs  cufft_roundtrip.rs  device_smoke.rs  fft_init.rs  fft_roundtrip.rs  hello_shader.rs  shared_fft.rs  shared_memory.rs  uni_roundtrip.rs  uuid_match.rs  vulkan_handles.rs
cartan-homog/: Cargo.toml  README.md
cartan-homog-valid/: Cargo.toml  README.md
cartan-homog-valid/python/: generate_fixtures.py  requirements.txt
cartan-homog-valid/python/configs/: v1_test_matrix.yaml
cartan-homog-valid/src/: approx.rs  fixture.rs  lib.rs
cartan-homog-valid/tests/: mean_field_basic.rs  pipeline_sandstone.rs
cartan-homog/examples/: rve_to_effective.rs
cartan-homog/src/: error.rs  float.rs  kelvin_mandel.rs  lib.rs  rve.rs  stochastic.rs  tensor.rs
cartan-homog/src/fullfield/: cell_problem.rs  hausdorff.rs  macroscale.rs  mesh.rs  mod.rs  solver.rs  spectral.rs  voxelize.rs
cartan-homog/src/schemes/: asymmetric_sc.rs  bounds.rs  differential.rs  dilute.rs  maxwell_pcw.rs  mod.rs  mori_tanaka.rs  self_consistent.rs
cartan-homog/src/shapes/: crack.rs  ellipsoid.rs  lebedev.rs  mod.rs  opts.rs  sphere.rs  sphere_nlayers.rs  spheroid.rs
cartan-homog/tests/: spectral_smoke.rs
cartan-io/: Cargo.toml  README.md
cartan-io/examples/: fixture.rs
cartan-io/src/: blender.rs  diagnostics.rs  director.rs  feec_fields.rs  lib.rs  pvd.rs  run.rs  sharp.rs  vtp.rs  vtu.rs  xml.rs
cartan-manifolds/: Cargo.toml  README.md
cartan-manifolds/benches/: geometry.rs
cartan-manifolds/src/: corr.rs  euclidean.rs  frame_field.rs  grassmann.rs  lib.rs  qtensor.rs  se.rs  so.rs  spd.rs  spd_bures.rs  sphere.rs
cartan-manifolds/src/util/: matrix_exp.rs  matrix_log.rs  mod.rs  skew.rs  sym.rs
cartan-manifolds/tests/: spd_bures.rs
cartan-maxwell/: Cargo.toml  README.md
cartan-maxwell/examples/: maxwell_record.rs
cartan-maxwell/src/: driver.rs  evolver.rs  lib.rs  state.rs
cartan-maxwell/tests/: energy.rs  flrw.rs  record.rs  synchronized_energy.rs
cartan-nalgebra/: Cargo.toml
cartan-nalgebra/src/: lib.rs
cartan-optim/: Cargo.toml  README.md
cartan-optim/src/: frechet.rs  lib.rs  rcg.rs  result.rs  rgd.rs  rtr.rs
cartan-optim/tests/: integration.rs
cartan-py/: Cargo.toml  README.md  pyproject.toml
cartan-py/src/: convert.rs  error.rs  geo.rs  holonomy.rs  lib.rs  optim.rs  stochastic.rs
cartan-py/src/dec/: line_bundle.rs  mesh.rs  mod.rs  operators.rs
cartan-py/src/manifolds/: corr.rs  euclidean.rs  frame_field.rs  grassmann.rs  macros.rs  mod.rs  qtensor.rs  se.rs  so.rs  spd.rs  sphere.rs
cartan-py/tests/: conftest.py  test_batch.py  test_corr.py  test_dec.py  test_euclidean.py  test_geo.py  test_grassmann.py  test_holonomy.py  test_optim.py  test_properties.py  test_qtensor.py  test_se.py  test_so.py  test_spd.py  test_sphere.py  test_stochastic.py
cartan-remesh/: Cargo.toml  README.md
cartan-remesh/src/: config.rs  driver.rs  error.rs  lcr.rs  lib.rs  log.rs  primitives.rs  primitives_3d.rs
cartan-remesh/tests/: flip_shift.rs  lcr_driver.rs  scaffold.rs  split_collapse.rs
cartan-simplicial/: Cargo.toml
cartan-simplicial/src/: affine.rs  gen.rs  geometry.rs  lib.rs  linalg.rs  topology.rs
cartan-simplicial/src/geometry/: coord.rs  metric.rs
cartan-simplicial/src/topology/: complex.rs  handle.rs  simplex.rs  skeleton.rs
cartan-stochastic/: Cargo.toml  README.md
cartan-stochastic/src/: development.rs  error.rs  frame.rs  horizontal.rs  lib.rs  sde.rs  wishart.rs
cartan-stochastic/tests/: spd_bures_bm.rs  sphere_bm.rs  wishart.rs
cartan-viz/: README.md  pyproject.toml
cartan-viz/src/cartan_viz/: __init__.py  brand.py  camera.py  chrome.py  cine.py  cli.py  composite.py  diagnostics.py  (+2 more)
cartan-viz/tests/: conftest.py  make_fixture.py  test_blender_script.py  test_cine.py  test_cli.py  test_composite.py  test_io.py  test_smoke.py  test_support.py
cartan/src/: lib.rs
cartan/tests/: test_corr.rs  test_euclidean.rs  test_grassmann.rs  test_optim.rs  test_se.rs  test_so.rs  test_spd.rs  test_sphere.rs
(+96 files in other folders)
