[workspace]
resolver = "2"
members = [
    "cartan",
    "cartan-core",
    "cartan-manifolds",
    "cartan-optim",
    "cartan-geo",
    "cartan-dec",
    "cartan-remesh",
    "cartan-stochastic",
    "cartan-homog",
    "cartan-homog-valid",
    "cartan-io",
    "cartan-exterior",
    "cartan-simplicial",
    "cartan-feec",
    "benchmarks/rust",
]
exclude = ["experiments", "cartan-py", "cartan-gpu"]

[workspace.package]
version = "0.6.0"
edition = "2024"
# Real floor: nalgebra 0.35 (and its safe_arch/wide deps) require rustc 1.89.
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/alejandro-soto-franco/cartan"
keywords = ["riemannian", "manifold", "optimization", "geometry", "geodesic"]
categories = ["mathematics", "science", "algorithms"]

[workspace.dependencies]
nalgebra = { version = "0.35", default-features = false }
itertools = { version = "0.13", default-features = false, features = ["use_std"] }
rand = { version = "0.9", default-features = false }
rand_distr = { version = "0.5", default-features = false }
rayon = { version = "1" }
thiserror = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1", default-features = false }
sprs = { version = "0.11", default-features = false }
approx = { version = "0.5", default-features = false }
hashbrown = { version = "0.15", default-features = false }
num-complex = { version = "0.4", default-features = false }
indexmap = { version = "2", default-features = false, features = ["std", "rayon"] }

[profile.release]
opt-level = 3
lto = "thin"     # fat LTO was causing OOM on 30 GB machine; thin cuts linker peak ~5-10x
codegen-units = 4  # default is 16; lower = less parallel RAM, better optimization
