[workspace]
resolver = "2"
members = [
    "cartan",
    "cartan-core",
    "cartan-manifolds",
    "cartan-optim",
    "cartan-geo",
    "cartan-dec",
    "cartan-remesh",
    "cartan-stochastic",
    "cartan-homog",
    "cartan-homog-valid",
    "cartan-io",
    "cartan-maxwell",
    "benchmarks/rust",
    "cartan-gpu",
]
# cartan-cuda pins a nightly toolchain (it depends on cuda-oxide, a rustc
# backend) and is publish = false while cuda-oxide is unpublished, so it stays
# out of the stable workspace.
exclude = ["experiments", "cartan-py", "cartan-cuda"]

[workspace.package]
version = "0.8.1"
edition = "2024"
# Real floor: nalgebra 0.35 (and its safe_arch/wide deps) require rustc 1.89.
rust-version = "1.89"
license = "MIT"
repository = "https://github.com/alejandro-soto-franco/cartan"
keywords = ["riemannian", "manifold", "optimization", "geometry", "geodesic"]
categories = ["mathematics", "science", "algorithms"]

[workspace.dependencies]
nalgebra = { version = "0.35", default-features = false }
itertools = { version = "0.13", default-features = false, features = ["use_std"] }
rand = { version = "0.9", default-features = false }
rand_distr = { version = "0.5", default-features = false }
thiserror = { version = "2", default-features = false }
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = { version = "1", default-features = false }
approx = { version = "0.5", default-features = false }
hashbrown = { version = "0.15", default-features = false }
num-complex = { version = "0.4", default-features = false }
criterion = { version = "0.5", default-features = false, features = ["cargo_bench_support"] }

# Upstream formoniq FEEC stack. Pinned exactly: 0.2.0 is the first published
# release and the crate graph was renamed wholesale just before it, so the API
# is not yet stable enough to float.
formoniq = { version = "=0.2.0" }
simplicial = { version = "=0.2.0" }
exterior = { version = "=0.2.0" }
derham = { version = "=0.2.0" }
gramian = { version = "=0.2.0" }
nalgebra-sparse = { version = "0.12" }

[profile.release]
opt-level = 3
lto = "thin"     # fat LTO was causing OOM on 30 GB machine; thin cuts linker peak ~5-10x
codegen-units = 4  # default is 16; lower = less parallel RAM, better optimization
