[package]
name = "cartan-core"
description = "Core traits for Riemannian geometry: Manifold, Retraction, ParallelTransport, Curvature"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["riemannian", "manifold", "geometry", "traits", "geodesic"]
categories = ["mathematics", "science", "algorithms"]
documentation = "https://docs.rs/cartan-core"
homepage = "https://cartan.sotofranco.dev"

[dependencies]
rand = { workspace = true }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
