[package]
name = "cartan-core"
description = "Core traits for Riemannian geometry and fiber bundles: Manifold, Fiber, DiscreteConnection, ParallelTransport, Curvature"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["riemannian", "manifold", "geometry", "traits", "geodesic"]
categories = ["mathematics", "science", "algorithms"]
documentation = "https://docs.rs/cartan-core"
homepage = "https://cartan.sotofranco.dev"

[features]
default = ["std"]
std = ["alloc", "rand/std"]
alloc = ["rand/alloc"]

[dependencies]
rand = { workspace = true, default-features = false }
# libm provides `sqrt` and other float math in no_std environments.
# Always present; only used when `std` feature is disabled.
libm = { version = "0.2", default-features = false }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
