[package]
name = "cartan-dec"
description = "Discrete exterior calculus on Riemannian manifolds: simplicial complexes, Hodge operators, and covariant differential operators built on cartan-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["exterior-calculus", "riemannian", "pde", "mesh", "hodge"]
categories = ["mathematics", "science", "algorithms"]
documentation = "https://docs.rs/cartan-dec"
homepage = "https://cartan.sotofranco.dev"

[dependencies]
cartan-core      = { path = "../cartan-core", version = "0.8" }
cartan-manifolds = { path = "../cartan-manifolds", version = "0.8" }
nalgebra         = { workspace = true }
nalgebra-sparse  = { workspace = true }
thiserror        = { workspace = true }
num-complex      = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
