[package]
name = "cartan-feec"
description = "Finite element exterior calculus: Whitney forms, cochains, Galerkin Hodge mass, and assembly for cartan"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cartan-exterior   = { path = "../cartan-exterior", version = "0.6" }
cartan-simplicial = { path = "../cartan-simplicial", version = "0.6" }
nalgebra  = { workspace = true }
sprs      = { workspace = true }
rayon     = { workspace = true }
thiserror = { workspace = true }
itertools = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
