[package]
name = "cartan-geo"
description = "Geodesic computation and geometric tools for cartan: geodesic curves, curvature queries, Jacobi fields"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["geodesic", "riemannian", "geometry", "curvature", "jacobi"]
categories = ["mathematics", "science", "algorithms"]
documentation = "https://docs.rs/cartan-geo"
homepage = "https://cartan.sotofranco.dev"

[dependencies]
cartan-core = { path = "../cartan-core" }
cartan-manifolds = { path = "../cartan-manifolds" }

[dev-dependencies]
nalgebra = { workspace = true }
rand = { workspace = true }
approx = { workspace = true }
