[package]
name = "cartan-geo"
description = "Geodesic computation and geometric tools for cartan: geodesic curves, curvature queries, Jacobi fields"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["geodesic", "riemannian", "geometry", "curvature", "jacobi"]
categories = ["mathematics", "science", "algorithms"]
documentation = "https://docs.rs/cartan-geo"
homepage = "https://cartan.sotofranco.dev"

[features]
default = ["std"]
std = ["alloc", "cartan-core/std", "cartan-manifolds/std"]
alloc = ["cartan-core/alloc", "cartan-manifolds/alloc"]

[dependencies]
cartan-core = { path = "../cartan-core", version = "0.1", default-features = false }
cartan-manifolds = { path = "../cartan-manifolds", version = "0.1", default-features = false }
nalgebra = { workspace = true, features = ["std"] }

[dev-dependencies]
rand = { workspace = true }
approx = { workspace = true }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
