[package]
name = "cartan-geo"
description = "Geodesic computation and geometric tools for cartan: geodesic curves, curvature queries, Jacobi fields"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["geodesic", "riemannian", "geometry", "curvature", "jacobi"]
categories = ["mathematics", "science", "algorithms"]
documentation = "https://docs.rs/cartan-geo"
homepage = "https://cartan.sotofranco.dev"

[features]
default = ["std"]
std = ["alloc", "cartan-core/std", "cartan-manifolds/std", "nalgebra/std"]
alloc = ["cartan-core/alloc", "cartan-manifolds/alloc", "nalgebra/alloc"]

[dependencies]
cartan-core = { path = "../cartan-core", version = "0.5", default-features = false }
cartan-manifolds = { path = "../cartan-manifolds", version = "0.5", default-features = false }
nalgebra = { workspace = true, features = ["libm"] }

[dev-dependencies]
rand = { workspace = true, features = ["std", "std_rng"] }
approx = { workspace = true }
cartan-stochastic = { path = "../cartan-stochastic", version = "0.5" }
cartan-manifolds = { path = "../cartan-manifolds", version = "0.5", features = ["std"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
