[package]
name = "cartan-gpu-sys"
description = "Raw FFI bindings to VkFFT (vendored). Internal to the cartan workspace."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["cryo-em", "fft", "vulkan", "vkfft", "ffi"]
categories = ["external-ffi-bindings", "science"]

[build-dependencies]
cc = "1.1"
bindgen = "0.70"
pkg-config = "0.3"

[lib]
doctest = false
