# This crate is its own workspace root, detached from the parent cartan
# workspace. Metadata is duplicated inline instead of inherited so the
# parent workspace's Cargo.toml stays untouched.

[workspace]

[package]
name = "cartan-gpu"
description = "Portable GPU compute primitives for the cartan ecosystem: wgpu device/buffer/kernel abstractions plus VkFFT-backed FFT."
version = "0.5.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/alejandro-soto-franco/cartan"
keywords = ["gpu", "wgpu", "vulkan", "fft", "compute"]
categories = ["science", "graphics"]
documentation = "https://docs.rs/cartan-gpu"
homepage = "https://cartan.sotofranco.dev"

[features]
default = ["vkfft"]
vkfft = ["dep:cartan-gpu-sys", "dep:ash"]
# CUDA backend plumbing (Driver API only). Pins cudarc to the CUDA 13.1
# ABI matching the development machine; swap the `cuda-13010` feature for
# another `cuda-NNNNN` or `cuda-version-from-build-system` when targeting
# a different CUDA installation.
cuda = ["dep:cudarc"]
# cuFFT-backed FFT. Builds on `cuda` and pulls in cudarc's `cufft` + `cublas`
# features. Parallel to `vkfft` on the Vulkan side. The cublas dep is used
# only for cublasSscal_v2 to apply the 1/N normalisation on inverse, so the
# unified Fft trait gives identical forward∘inverse = identity semantics
# across both backends.
cufft = ["cuda", "cudarc/cufft", "cudarc/cublas"]

[dependencies]
wgpu = { version = "29", default-features = false, features = ["vulkan", "wgsl"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
thiserror = { version = "2", default-features = false, features = ["std"] }
num-complex = { version = "0.4", default-features = false, features = ["std", "bytemuck"] }
log = "0.4"
cartan-gpu-sys = { path = "../cartan-gpu-sys", version = "0.5.0", optional = true }
ash = { version = "0.38", default-features = false, features = ["loaded"], optional = true }
cudarc = { version = "0.19", default-features = false, features = ["std", "driver", "cuda-13010", "fallback-dynamic-loading"], optional = true }

[dev-dependencies]
env_logger = "0.11"
approx = { version = "0.5", default-features = false, features = ["std"] }
rustfft = "6"
criterion = { version = "0.5", default-features = false, features = ["html_reports"] }

[[bench]]
name = "fft_compare"
harness = false
required-features = ["vkfft", "cufft"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
