[package]
name = "cartan-gpu"
description = "Portable GPU compute primitives for the cartan ecosystem: wgpu device/buffer/kernel abstractions. FFT lives in the standalone gpufft crate (re-exported via the `fft` feature)."
version = "0.6.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/alejandro-soto-franco/cartan"
keywords = ["gpu", "wgpu", "compute", "fft"]
categories = ["science", "graphics"]
documentation = "https://docs.rs/cartan-gpu"
homepage = "https://cartan.sotofranco.dev"

[features]
default = []
# FFT via gpufft. The Vulkan and CUDA features activate gpufft's
# corresponding backends. The shared feature additionally requires Linux.
fft = ["dep:gpufft"]
vulkan = ["fft", "gpufft/vulkan"]
cuda = ["fft", "gpufft/cuda"]
shared = ["vulkan", "cuda", "gpufft/shared"]

[dependencies]
wgpu = { version = "29", default-features = false, features = ["vulkan", "wgsl"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
thiserror = { version = "2", default-features = false, features = ["std"] }
log = "0.4"
gpufft = { path = "../../gpufft/gpufft", version = "0.1", default-features = false, optional = true }

[dev-dependencies]
env_logger = "0.11"
approx = { version = "0.5", default-features = false, features = ["std"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 4
