[package]
name = "cartan-gpu"
description = "Portable GPU compute primitives for the cartan ecosystem: wgpu device/buffer/kernel abstractions. FFT lives in the standalone gpufft crate (re-exported via the `fft` feature)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["gpu", "wgpu", "compute", "fft"]
categories = ["science", "graphics"]
documentation = "https://docs.rs/cartan-gpu"
homepage = "https://cartan.sotofranco.dev"

[features]
default = []
# FFT via gpufft. The Vulkan and CUDA features activate gpufft's
# corresponding backends. The shared feature additionally requires Linux.
fft = ["dep:gpufft"]
vulkan = ["fft", "gpufft/vulkan"]
cuda = ["fft", "gpufft/cuda"]
shared = ["vulkan", "cuda", "gpufft/shared"]

[dependencies]
wgpu = { version = "29", default-features = false, features = ["vulkan", "wgsl"] }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
thiserror = { version = "2", default-features = false, features = ["std"] }
log = "0.4"
gpufft = { version = "0.1.3", default-features = false, optional = true }

[dev-dependencies]
env_logger = "0.11"
approx = { version = "0.5", default-features = false, features = ["std"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


