[package]
name = "cartan-homog"
description = "Mean-field and full-field homogenisation of random media on SPD manifolds, generic over tensor order"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["homogenization", "micromechanics", "eshelby", "mori-tanaka", "spd"]
categories = ["mathematics", "science", "algorithms"]

[features]
default = ["std", "serde"]
std = ["alloc", "cartan-core/std", "cartan-manifolds/std", "nalgebra/std"]
alloc = ["cartan-core/alloc", "cartan-manifolds/alloc", "nalgebra/alloc"]
serde = ["dep:serde"]
full-field = ["std", "dep:cartan-dec", "dep:cartan-remesh", "dep:sprs", "dep:rayon"]
stochastic = ["std", "dep:cartan-stochastic", "dep:rand", "dep:rand_distr"]

[dependencies]
cartan-core       = { path = "../cartan-core",       version = "0.5", default-features = false }
cartan-manifolds  = { path = "../cartan-manifolds",  version = "0.5", default-features = false }
cartan-dec        = { path = "../cartan-dec",        version = "0.5", optional = true }
cartan-remesh     = { path = "../cartan-remesh",     version = "0.5", optional = true }
cartan-stochastic = { path = "../cartan-stochastic", version = "0.5", optional = true }
nalgebra   = { workspace = true, features = ["libm"] }
thiserror  = { workspace = true }
serde      = { workspace = true, optional = true }
sprs       = { workspace = true, optional = true }
rayon      = { workspace = true, optional = true }
rand       = { workspace = true, optional = true, default-features = false }
rand_distr = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
approx = { workspace = true }
rand   = { workspace = true, features = ["small_rng"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
