[package]
name = "cartan-homog"
description = "Mean-field and full-field homogenisation of random media on SPD manifolds, generic over tensor order"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["homogenization", "micromechanics", "eshelby", "mori-tanaka", "spd"]
categories = ["mathematics", "science", "algorithms"]

[features]
default = ["std"]
std = ["alloc", "cartan-core/std", "cartan-manifolds/std", "nalgebra/std"]
alloc = ["cartan-core/alloc", "cartan-manifolds/alloc", "nalgebra/alloc"]
full-field = ["std", "dep:cartan-dec", "dep:cartan-remesh", "dep:sprs"]
stochastic = ["std", "dep:cartan-stochastic", "dep:rand", "dep:rand_distr"]
# Spectral (Moulinec–Suquet) homogenisation through gpufft's FFT.
# Alternative to the FEM full-field path; the two methods discretise the
# cell problem differently and give comparable effective tensors for the
# same RVE.
gpu-fft = ["full-field", "dep:gpufft", "dep:num-complex"]

[dependencies]
cartan-core       = { path = "../cartan-core",       version = "0.7", default-features = false }
cartan-manifolds  = { path = "../cartan-manifolds",  version = "0.7", default-features = false }
cartan-dec        = { path = "../cartan-dec",        version = "0.7", optional = true }
cartan-remesh     = { path = "../cartan-remesh",     version = "0.7", optional = true }
cartan-stochastic = { path = "../cartan-stochastic", version = "0.7", optional = true }
nalgebra   = { workspace = true, features = ["libm"] }
# libm supplies float transcendentals when std is off. Always present; only
# used in no_std mode. Matches the pattern in cartan-core.
libm       = { version = "0.2", default-features = false }
thiserror  = { workspace = true }
sprs       = { workspace = true, optional = true }
rand       = { workspace = true, optional = true, default-features = false }
rand_distr = { workspace = true, optional = true, default-features = false }
# Spectral FFT via gpufft (published crate). Vulkan backend is sufficient for
# Moulinec-Suquet. Add gpufft/cuda or gpufft/shared as a downstream feature if needed.
gpufft = { version = "0.1", default-features = false, features = ["vulkan"], optional = true }
num-complex = { version = "0.4", optional = true, default-features = false, features = ["std", "bytemuck"] }

[dev-dependencies]
approx = { workspace = true }
rand   = { workspace = true, features = ["small_rng"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
