[package]
name = "cartan-io"
description = "VTK, ParaView, and Blender export for cartan: dimension-generic UnstructuredGrid writer, run-directory recorder, and FEEC field reconstruction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cartan-core      = { path = "../cartan-core", version = "0.6" }
cartan-dec       = { path = "../cartan-dec", version = "0.6" }
cartan-manifolds = { path = "../cartan-manifolds", version = "0.6" }
cartan-simplicial = { path = "../cartan-simplicial", version = "0.6" }
cartan-feec       = { path = "../cartan-feec", version = "0.6" }
cartan-exterior   = { path = "../cartan-exterior", version = "0.6" }
nalgebra         = { workspace = true }
num-complex      = { workspace = true }
sprs             = { workspace = true }
base64           = "0.22"

[dev-dependencies]
approx = { workspace = true }
