[package]
name = "cartan-io"
description = "VTK, ParaView, and Blender export for cartan: dimension-generic UnstructuredGrid writer, run-directory recorder, and FEEC field reconstruction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cartan-core      = { path = "../cartan-core", version = "0.7" }
cartan-dec       = { path = "../cartan-dec", version = "0.7" }
cartan-manifolds = { path = "../cartan-manifolds", version = "0.7" }
simplicial       = { workspace = true }
derham           = { workspace = true }
nalgebra         = { workspace = true }
num-complex      = { workspace = true }
base64           = "0.22"

[dev-dependencies]
approx = { workspace = true }
