[package]
name = "cartan-manifolds"
description = "Concrete Riemannian manifold implementations for cartan: Sphere, SO(n), SPD(n), Grassmann, Euclidean"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["riemannian", "manifold", "sphere", "grassmann", "lie-group"]
categories = ["mathematics", "science", "algorithms"]
documentation = "https://docs.rs/cartan-manifolds"
homepage = "https://cartan.sotofranco.dev"

[features]
default = ["std"]
std = ["alloc", "cartan-core/std", "rand/std", "rand_distr/std"]
# nalgebra/std is declared unconditionally in [dependencies] (float ops require it).
# Alloc-dependent manifolds (Grassmann, SPD, Corr) are gated behind #[cfg(feature="alloc")].
alloc = ["cartan-core/alloc", "rand/alloc", "rand_distr/alloc"]

[dependencies]
cartan-core = { path = "../cartan-core", version = "0.1", default-features = false }
# nalgebra/std is required unconditionally: float ops (norm, SVD, trig) need RealField
# which nalgebra only provides via its `std` feature. Bare no_std is a known limitation.
nalgebra = { workspace = true, features = ["std"] }
rand = { workspace = true, default-features = false }
rand_distr = { workspace = true, default-features = false }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
