[package]
name = "cartan-manifolds"
description = "Concrete Riemannian manifold implementations for cartan: Sphere, SO(n), SPD(n), Grassmann, Euclidean"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["riemannian", "manifold", "sphere", "grassmann", "lie-group"]
categories = ["mathematics", "science", "algorithms"]
documentation = "https://docs.rs/cartan-manifolds"
homepage = "https://cartan.sotofranco.dev"

[features]
default = ["std"]
std = ["alloc", "cartan-core/std", "rand/std", "rand_distr/std", "nalgebra/std"]
alloc = ["cartan-core/alloc", "rand/alloc", "rand_distr/alloc", "nalgebra/alloc"]

[dependencies]
cartan-core = { path = "../cartan-core", version = "0.2", default-features = false }
# libm satisfies f64: RealField in no_std mode (unconditional — no harm in std mode).
# nalgebra/std and nalgebra/alloc are threaded through the feature flags above.
nalgebra = { workspace = true, features = ["libm"] }
rand = { workspace = true, default-features = false }
rand_distr = { workspace = true, default-features = false }

[dev-dependencies]
approx = { workspace = true }
rand = { workspace = true, features = ["small_rng"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
