[package]
name = "cartan-maxwell"
description = "Maxwell evolution on a prescribed evolving simplicial-Riemannian (Regge) background"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cartan-exterior   = { path = "../cartan-exterior", version = "0.6" }
cartan-simplicial = { path = "../cartan-simplicial", version = "0.6" }
cartan-feec       = { path = "../cartan-feec", version = "0.6" }
nalgebra  = { workspace = true }
sprs      = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
