[package]
name = "cartan-maxwell"
description = "Maxwell evolution on a prescribed evolving simplicial-Riemannian (Regge) background"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
formoniq        = { workspace = true }
simplicial      = { workspace = true }
exterior        = { workspace = true }
derham          = { workspace = true }
nalgebra        = { workspace = true }
nalgebra-sparse = { workspace = true }

[dev-dependencies]
approx    = { workspace = true }
nalgebra  = { workspace = true }
cartan-io = { path = "../cartan-io", version = "0.8" }
