[package]
name = "cartan-nalgebra"
description = "nalgebra backend for the cartan Riemannian geometry library"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["riemannian", "manifold", "nalgebra", "geometry", "linear-algebra"]
categories = ["mathematics", "science", "algorithms"]
documentation = "https://docs.rs/cartan-nalgebra"
homepage = "https://cartan.sotofranco.dev"

[dependencies]
cartan-core = { path = "../cartan-core" }
nalgebra = { workspace = true }
rand = { workspace = true }
