[package]
name = "cartan-optim"
description = "Riemannian optimization algorithms for cartan: Riemannian gradient descent, conjugate gradient, trust region"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
cartan-core = { path = "../cartan-core" }
cartan-manifolds = { path = "../cartan-manifolds" }

[dev-dependencies]
nalgebra = { workspace = true }
rand = { workspace = true }
approx = { workspace = true }
