[package]
name = "cartan-optim"
description = "Riemannian optimization algorithms for cartan: Riemannian gradient descent, conjugate gradient, trust region"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
keywords = ["optimization", "riemannian", "manifold", "gradient-descent", "trust-region"]
categories = ["mathematics", "science", "algorithms"]
documentation = "https://docs.rs/cartan-optim"
homepage = "https://cartan.sotofranco.dev"

[dependencies]
cartan-core = { path = "../cartan-core" }
cartan-manifolds = { path = "../cartan-manifolds" }

[dev-dependencies]
nalgebra = { workspace = true }
rand = { workspace = true }
approx = { workspace = true }
